Add overloads to let tests compile without changes